diwi: initial setup for development/test/deploy

--- a/app/diwi/trunk/server/build.properties
+++ b/app/diwi/trunk/server/build.properties
@@ -4,8 +4,8 @@
 build.compiler=jikes
 
 war.name=diwi
-deploy.local.dir=/var/keyworx/webapps
-deploy.live.dir=/Volumes/homes/httpd/diwi.nl
+deploy.local.dir=/var/keyworx/webapps/local.diwi.nl
+# deploy.live.dir=/Volumes/homes/httpd/diwi.nl
 
 
 
