--- a/base/trunk/external/build.properties
+++ b/base/trunk/external/build.properties
@@ -65,6 +65,10 @@ mmapi.dir=${geotracing.external.dir}/${mmapi}
 mwt=mwt-1.1
 mwt.dir=${geotracing.external.dir}/${mwt}
 
+# OpenLayers, JavaScript library for map data display - provider http://www.openlayers.org
+openlayers=openlayers-2.3-rc3
+openlayers.dir=${geotracing.external.dir}/${openlayers}
+
 # Postgis JDBC driver - provider: postgis.refractions.net
 postgis-jdbc=postgis-jdbc-1.1.1
 postgis-jdbc.dir=${geotracing.external.dir}/${postgis-jdbc}
