diwi: first version client setup

--- a/app/diwi/trunk/build.properties
+++ b/app/diwi/trunk/build.properties
@@ -3,7 +3,11 @@
 # project props
 project.name=diwi
 project.id=diwi
-version=0.0.1
+project.version=0.0.1
+
+deploy.local.dir=/var/keyworx/webapps/local.diwi.nl
+deploy.test.dir=/var/keyworx/webapps/test.diwi.nl
+
 
 
 
