--- a/app/diwi/trunk/server/build.xml
+++ b/app/diwi/trunk/server/build.xml
@@ -301,7 +301,7 @@ $Id: build.xml 353 2007-02-02 12:04:11Z just $
 		<mkdir dir="${build.lib.dir}"/>
 	</target>
 
-	<target name="deploy-local">
+	<target name="deploy-local" depends="war">
 		<copy file="${project.war}" todir="${deploy.local.dir}" overwrite="true"/>
 	</target>
 
