Further development of protocol and code structure

--- a/app/diwi/trunk/server/cfg/server.properties
+++ b/app/diwi/trunk/server/cfg/server.properties
@@ -20,3 +20,7 @@ keyworx.log.dir=/var/keyworx/log/diwi
 # default: INFO
 keyworx.log.level=INFO
 
+#Route generator REST URL
+diwi.routegenerator.url=http://local.diwi.nl/generateRoute.jsp
+
+
