--- a/app/diwi/trunk/client/web/build.xml
+++ b/app/diwi/trunk/client/web/build.xml
@@ -85,10 +85,18 @@ $Id$
 	<!-- Build all clean. -->
 	<target name="build" depends="package"/>
 
-	<target name="copy-test" depends="assemble">
+	<target name="deploy-test" depends="assemble">
 		<exec executable="scp">
 			<arg line="-r"/>
 			<arg line="${home}/"/>
+			<arg line="${deploy.test.dir}" />
+		</exec>
+	</target>
+
+	<target name="deploy-test-diwi-only" depends="assemble">
+		<exec executable="scp">
+			<arg line="-r"/>
+			<arg line="${home}/index.html"/>
 			<arg line="${deploy.test.dir}/web" />
 		</exec>
 	</target>
