Full cicle for testing REST interface

--- a/app/diwi/trunk/server/cfg/server.properties
+++ b/app/diwi/trunk/server/cfg/server.properties
@@ -21,6 +21,6 @@ keyworx.log.dir=/var/keyworx/log/diwi
 keyworx.log.level=INFO
 
 #Route generator REST URL
-diwi.routegenerator.url=http://local.diwi.nl/generateRoute.jsp
+diwi.routegenerator.url=http://local.diwi.nl/diwi/test.jsp
 
 
