diwi: cms poi code

--- a/app/diwi/trunk/server/cfg/server.properties
+++ b/app/diwi/trunk/server/cfg/server.properties
@@ -22,5 +22,7 @@ keyworx.log.level=INFO
 
 #Route generator REST URL
 diwi.routegenerator.url=http://local.diwi.nl/diwi/test.jsp
+kich.post.url=http://local.diwi.nl/diwi/kich.jsp
+kich.rest.url=http://local.diwi.nl/diwi/rest.jsp
 
 
