base: added GeoTools coordinate transform

--- a/base/trunk/external/build.properties
+++ b/base/trunk/external/build.properties
@@ -37,6 +37,10 @@ dojo-ajax.dir=${geotracing.external.dir}/${dojo-ajax}
 ehcache=ehcache-1.2.4
 ehcache.dir=${geotracing.external.dir}/${ehcache}
 
+# GeoTools referencing coordinate transform - provider: http://www.geotools.org
+geotools-referencing=geotools-referencing-2.3.0
+geotools-referencing.dir=${geotracing.external.dir}/${geotools-referencing}
+
 # KeyWorx distro - provider: www.keyworx.org
 keyworx=keyworx-1.0.7rc4
 keyworx.dir=${geotracing.external.dir}/${keyworx}
