diwi: added geotools-referencing

--- a/app/diwi/trunk/server/build.xml
+++ b/app/diwi/trunk/server/build.xml
@@ -53,6 +53,9 @@ $Id: build.xml 353 2007-02-02 12:04:11Z just $
 	<property name="scp" value="${home.bin.dir}/scp.sh"/>
 	<property name="postgis-jdbc.jar" value="${postgis-jdbc.dir}/postgis.jar"/>
 	<property name="ehcache.jar" value="${ehcache.dir}/ehcache-1.2.4.jar"/>
+	<property name="geoapi.jar" value="${geotools-referencing.dir}/geoapi-nogenerics-2.1-M2.jar"/>
+	<property name="gt2-epsg-wkt.jar" value="${geotools-referencing.dir}/gt2-epsg-wkt-2.3.0.jar"/>
+	<property name="gt2-referencing.jar" value="${geotools-referencing.dir}/gt2-referencing-2.3.0.jar"/>
 
 	<!-- All sources to be compiled -->
 	<property name="server.src.path" value="${home.src.dir}"/>
@@ -78,6 +81,9 @@ $Id: build.xml 353 2007-02-02 12:04:11Z just $
 		<pathelement location="${kwx-tagging.jar}"/>
 		<pathelement location="${servlet.jar}"/>
 		<pathelement location="${ehcache.jar}"/>
+		<pathelement location="${geoapi.jar}"/>
+		<pathelement location="${gt2-epsg-wkt.jar}"/>
+		<pathelement location="${gt2-referencing.jar}"/>
 	</path>
 
 	<!-- Initialize: create dirs and set timestamp.. -->
@@ -117,7 +123,11 @@ $Id: build.xml 353 2007-02-02 12:04:11Z just $
 		<ant antfile="${geotracing.external.dir}/build.xml" target="get-external" inheritall="false">
 			<property name="package" value="${ehcache}"/>
 		</ant>
-	</target>
+
+		<ant antfile="${geotracing.external.dir}/build.xml" target="get-external" inheritall="false">
+			<property name="package" value="${geotools-referencing}"/>
+		</ant>
+ 	</target>
 
 	<!-- Compile the java files. -->
 	<target name="compile" depends="init,externals">
@@ -210,6 +220,11 @@ $Id: build.xml 353 2007-02-02 12:04:11Z just $
 			</fileset>
 			<fileset dir="${ehcache.dir}">
 				<include name="ehcache-1.2.4.jar"/>
+			</fileset>
+			<fileset dir="${geotools-referencing.dir}">
+				<include name="geoapi-nogenerics-2.1-M2.jar"/>
+				<include name="gt2-epsg-wkt-2.3.0.jar"/>
+				<include name="gt2-referencing-2.3.0.jar"/>
 			</fileset>
 		</copy>
 
