diwi: adding javax.units jar (geotools req)

--- a/app/diwi/trunk/server/build.xml
+++ b/app/diwi/trunk/server/build.xml
@@ -56,6 +56,7 @@ $Id: build.xml 353 2007-02-02 12:04:11Z just $
 	<property name="geoapi.jar" value="${geotools-referencing.dir}/geoapi-nogenerics-2.1-M2.jar"/>
 	<property name="gt2-epsg-wkt.jar" value="${geotools-referencing.dir}/gt2-epsg-wkt-2.3.0.jar"/>
 	<property name="gt2-referencing.jar" value="${geotools-referencing.dir}/gt2-referencing-2.3.0.jar"/>
+	<property name="javax-units.jar" value="${geotools-referencing.dir}/jsr108-0.01.jar"/>
 
 	<!-- All sources to be compiled -->
 	<property name="server.src.path" value="${home.src.dir}"/>
@@ -225,6 +226,7 @@ $Id: build.xml 353 2007-02-02 12:04:11Z just $
 				<include name="geoapi-nogenerics-2.1-M2.jar"/>
 				<include name="gt2-epsg-wkt-2.3.0.jar"/>
 				<include name="gt2-referencing-2.3.0.jar"/>
+				<include name="jsr108-0.01.jar"/>
 			</fileset>
 		</copy>
 
