take photo/video, login to kwx, general debugging.

--- a/app/diwi/trunk/client/mobile/Diwi/Diwi.csproj
+++ b/app/diwi/trunk/client/mobile/Diwi/Diwi.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppController.cs" />
+    <Compile Include="DiwiButton.cs" />
     <Compile Include="DiwiDrawable.cs" />
     <Compile Include="DiwiImage.cs" />
     <Compile Include="DiwiMenu.cs" />
