--- a/app/diwi/trunk/server/build.xml
+++ b/app/diwi/trunk/server/build.xml
@@ -227,6 +227,7 @@ $Id: build.xml 353 2007-02-02 12:04:11Z just $
 				<include name="gt2-epsg-wkt-2.3.0.jar"/>
 				<include name="gt2-referencing-2.3.0.jar"/>
 				<include name="jsr108-0.01.jar"/>
+				<include name="vecmath-1.3.1.jar"/>
 			</fileset>
 		</copy>
 
