base: upgrade openlayers from 2.3rc3 to 2.3

--- a/base/trunk/external/build.properties
+++ b/base/trunk/external/build.properties
@@ -70,7 +70,7 @@ mwt=mwt-1.1
 mwt.dir=${geotracing.external.dir}/${mwt}
 
 # OpenLayers, JavaScript library for map data display - provider http://www.openlayers.org
-openlayers=openlayers-2.3-rc3
+openlayers=openlayers-2.3
 openlayers.dir=${geotracing.external.dir}/${openlayers}
 
 # Postgis JDBC driver - provider: postgis.refractions.net
