apps: migrate from MySQL to PostgreSQL

--- a/app/bliin/trunk/server/build.properties
+++ b/app/bliin/trunk/server/build.properties
@@ -3,13 +3,13 @@
 # project props
 project.name=Bliin
 project.id=bliin
-version=1.0.10
+version=1.0.11
 
 war.name=bliin01
 front.name=use
 
 # specify the directory of the GeoTracing unpacked .war archive
-gt.war.dir=${basedir}/../../../../base/trunk/server/build/war
+gt.war.dir=${basedir}/../../../../base/branches/1.3/server/build/war
 
 # specify the directory for your (tomcat) webapps
 deploy.local.dir=/var/keyworx/webapps/local.bliin.com
