--- a/app/diwi/trunk/client/web/build.xml
+++ b/app/diwi/trunk/client/web/build.xml
@@ -85,19 +85,11 @@ $Id$
 	<!-- Build all clean. -->
 	<target name="build" depends="package"/>
 
-	<target name="deploy-test" depends="assemble">
-		<exec executable="scp">
-			<arg line="-r"/>
+	<target name="sync-test" depends="assemble">
+		<exec executable="rsync">
+			<arg line="-alzvx --delete -e ssh "/>
 			<arg line="${home}/"/>
-			<arg line="${deploy.test.dir}" />
-		</exec>
-	</target>
-
-	<target name="deploy-test-diwi-only" depends="assemble">
-		<exec executable="scp">
-			<arg line="-r"/>
-			<arg line="${home}/index.html ${home}/test"/>
-			<arg line="${deploy.test.dir}/web" />
+			<arg line="${deploy.test.dir}/web/" />
 		</exec>
 	</target>
 
