--- a/app/diwi/trunk/server/build.xml
+++ b/app/diwi/trunk/server/build.xml
@@ -337,14 +337,11 @@ $Id: build.xml 353 2007-02-02 12:04:11Z just $
 			</copy> -->
 	</target>
 
-	<target name="deploy-live">
-		<copy file="${project.war}" todir="${deploy.live.dir}" overwrite="true"/>
-	</target>
-
-	<target name="deploy-live-raw">
-		<copy todir="${deploy.live.dir}/${war.name}" overwrite="true">
-			<fileset dir="${home.webapp.dir}/${war.name}"/>
-		</copy>
+	<target name="copy-war-berlin">
+		<exec executable="scp">
+			<arg line="${project.war}"/>
+			<arg line="${deploy.test.server}:versions"/>
+		</exec>
 	</target>
 
 	<target name="deploy-gmap">
