diwi: add example multi-page KW session management

--- a/app/diwi/trunk/build.properties
+++ b/app/diwi/trunk/build.properties
@@ -6,7 +6,8 @@ project.id=diwi
 project.version=0.0.1
 
 deploy.local.dir=/var/keyworx/webapps/local.diwi.nl
-deploy.test.dir=keyworx@88.198.19.182:/var/keyworx/webapps/diwi
+deploy.test.server=keyworx@88.198.19.182
+deploy.test.dir=${deploy.test.server}:/var/keyworx/webapps/diwi
 
 
 
