--- a/app/diwi/trunk/server/build.xml
+++ b/app/diwi/trunk/server/build.xml
@@ -337,10 +337,10 @@ $Id: build.xml 353 2007-02-02 12:04:11Z just $
 			</copy> -->
 	</target>
 
-	<target name="copy-war-berlin">
+	<target name="deploy-berlin">
 		<exec executable="scp">
 			<arg line="${project.war}"/>
-			<arg line="${deploy.test.server}:versions"/>
+			<arg line="${deploy.test.server}:/var/keyworx/webapps/diwi"/>
 		</exec>
 	</target>
 
