diwi: changed for new domain name for test server

--- a/app/diwi/trunk/build.properties
+++ b/app/diwi/trunk/build.properties
@@ -6,7 +6,7 @@ project.id=diwi
 project.version=0.0.1
 
 deploy.local.dir=/var/keyworx/webapps/local.diwi.nl
-deploy.test.server=keyworx@88.198.19.182
+deploy.test.server=keyworx@test.digitalewichelroede.nl
 deploy.test.dir=${deploy.test.server}:/var/keyworx/webapps/diwi
 
 
