diwi: chg sync to deploy-test

--- a/app/diwi/trunk/client/web/build.xml
+++ b/app/diwi/trunk/client/web/build.xml
@@ -85,7 +85,7 @@ $Id$
 	<!-- Build all clean. -->
 	<target name="build" depends="package"/>
 
-	<target name="sync-test" depends="assemble">
+	<target name="deploy-test" depends="assemble">
 		<exec executable="rsync">
 			<arg line="-alzvx --delete -e ssh "/>
 			<arg line="${home}/"/>
